<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:elevation="@dimen/resting_card_elevation"
    android:translationZ="@dimen/pressed_card_elevation"
    android:id="@+id/card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@drawable/photo_background_protection"
            android:contentDescription="@string/rest_img" />

        <TextView
            android:id="@+id/rest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:textColor="@color/colorWhite"
            android:layout_margin="4dp"
            android:contentDescription="@string/rest_name"
            style="@style/TextAppearance.AppCompat.Medium" />

        <RatingBar
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_margin="4dp"
            android:contentDescription="@string/rating_bar" />

    </LinearLayout>
</android.support.v7.widget.CardView>